--- a/style.css
+++ b/style.css
@@ -1,136 +1,99 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'poppins' , sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
-.container{
-    width: 100%;
-    height:100vh;
-    background-image: url("images/background.png");
-    background-position: center;
-    background-size: cover;
-    padding:0 7px;
+body {
+    background-color: #101010;
     color: #fff;
 }
 
-nav{
+.container {
     width: 100%;
+    height: 100vh;
+    background: url("images/background.png") center/cover no-repeat;
+    padding: 0 20px;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding: 20px 0;
-    display: flex;
-    align-items: center;
 }
-.logo{
+
+.logo {
     width: 50px;
-    cursor: pointer;
 }
-nav ul{
-    flex: 1;
+
+nav ul {
+    display: flex;
+    list-style: none;
 }
+
 nav ul li {
-    display: inline-block;
-    margin: 10px 20px;
-}
-
-nav ul li a{
-    color: #fff;
-    text-decoration: none;
-}
-
-nav .btn{
-    color: #fff;
-    text-decoration: none;
-    border:1px solid #fff;
-    background-color: #ff960b;
-    padding: 10px 30px;
-    border-radius: 20px;
-}
-.content{
-    margin-top: 12%;
-}
-.content h1{
-    font-size: 88px;
-    margin-bottom: 15px;
-}
-.content h1 span{
-    color:#ff960b;
-}
-
-.content p{
-    line-height: 22px;
-    font-size: 14px;
-}
-
-.content .btn{
-    display: inline-block;
-    margin-top: 30px;
-    background-color: #ff960b;
-    color: #fff;
-    text-decoration: none;
-    padding: 15px 30px;
-    border-radius: 30px;
-}
-
-.coin-list{
-    position: absolute;
-    right: 10%;
-    bottom: 50px;
-    display: flex;
-    align-items: center;
-}
-
-.coin{
-    display: flex;
-    align-items: center;
-    border: 1px solid #fff;
-    font-size: 14px;
     margin: 0 15px;
-    padding: 20px 30px;
-    color: #ff960b;
-    border-radius: 30px;
-    box-shadow: 3px 3px 15px rgba(200, 200, 200, 0.9);
-    cursor: pointer;
-}
-.coin img{
-    width: 40px;
-    margin-right: 10px;
 }
 
-.coin h3{
-    color: #fff;
-    margin-bottom: 5px;
-}
-
-/* New sections styling */
-#features, #white-papers, #about-us {
-    margin: 50px 20px;
-    padding: 20px;
-    border: 1px solid #fff;
-    border-radius: 10px;
-    background: rgba(0, 0, 0, 0.7);
-}
-
-#features ul, #white-papers .carousel {
-    margin-top: 15px;
-}
-
-#features li, #white-papers a {
-    margin: 10px 0;
-    color: #ff960b;
-}
-
-#white-papers .carousel a {
-    display: block;
+nav ul li a {
     text-decoration: none;
-}
-
-#about-us p {
-    margin-top: 15px;
     color: #fff;
+    font-size: 16px;
 }
 
-/* Language Button Update */
-#lang-btn {
+.btn {
+    background-color: #ff960b;
+    color: #fff;
+    border: none;
+    border-radius: 20px;
+    padding: 10px 20px;
     cursor: pointer;
+}
+
+.content {
+    text-align: center;
+    margin-top: 10%;
+}
+
+.content h1 {
+    font-size: 70px;
+}
+
+.content h1 span {
+    color: #ff960b;
+}
+
+.coin-list {
+    display: flex;
+    justify-content: center;
+    margin: 50px 0;
+}
+
+.coin {
+    display: flex;
+    align-items: center;
+    margin: 0 15px;
+    padding: 20px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 15px;
+    cursor: pointer;
+}
+
+.coin img {
+    width: 40px;
+    margin-right: 15px;
+}
+
+section {
+    padding: 30px 0;
+    text-align: center;
+}
+
+.carousel a {
+    display: block;
+    color: #ff960b;
+    text-decoration: none;
+    margin: 10px 0;
 }
